[tool.poetry]
name = "maesterd-app"
version = "0.1.0"
description = "Monorepo for maesterd and maesterd_web"
authors = [
    "uncletoxa <https://github.com/uncletoxa>",
    "eskinmi <mustafasamedeskin@gmail.com>"
]
packages = [{include = "maesterd"}, {include = "maesterd_web"}]

[tool.poetry.dependencies]
python = "3.9.18"
maesterd = { path = "maesterd", develop = true }
maesterd_web = { path = "maesterd_web", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
