[tool.poetry]
name = "maesterd"
version = "0.1.0"
description = ""
authors = ["eskinmi <mustafasamedeskin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
pydantic = "^2.10.3"
langchain = "^0.3.12"
langchain-openai = "^0.2.12"
langgraph = "^0.2.60"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
pytest = "^7.3.1"
moto = "^4.1.8"
pre-commit = "^3.3.1"
toml = "^0.10.2"
black = "^22.6.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ['tests/']

[tool.black]
line-length = 120
target-version = ['py39']

[tool.poetry.scripts]
campaign = "maesterd.cli:cli"
