[project]
name = "maesterd"
version = "0.1.0"
escription = ""
authors = ["eskinmi <mustafasamedeskin@gmail.com>"]
readme = "README.md"
requires-python = ">=3.9.18"
dependencies = [
    "pydantic>=2.10.3",
    "langchain>=0.3.12",
    "langchain-openai>=0.2.12",
    "langgraph>=0.2.60",
    "flask>=3.1.0",
]

[dependency-groups]
dev = [
    "black>=22.6.0",
    "flake8>=6.1.0",
    "mock>=5.0.2",
    "moto>=4.1.8",
    "pre-commit>=3.3.1",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "toml>=0.10.2",
]

[tool.black]
line-length = 120
target-version = ['py39']
